feat: add pagination in enteprise and add input e output
